methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:25: error: type mismatch;
 found   : Unit
 required: Boolean
  right();
       ^